# gpt-farm

./: .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml
gpt_farm/: __init__.py  cli.py  config.py  cpa.py  sentinel.py  tui.py
gpt_farm/providers/: __init__.py
gpt_farm/providers/email/: __init__.py  base.py  gmail.py  luckmail.py
gpt_farm/providers/sms/: __init__.py  base.py  herosms.py
skills/: gpt-farm.md
